@@ -764,6 +764,14 @@
 		</tr>
 
 		<tr>
+			<td><pre>-audiofirst &lt;1|0&gt;</pre></td>
+			<td>Initialize the audio subsystem before video when emulating a
+				ROM.  This seems to be required when using ATI video cards
+				in OpenGL mode in Windows.  Since it doesn't hurt other
+				systems, the default is 1.</td>
+		</tr>
+
+		<tr>
 			<td><pre>-ssdir &lt;path&gt;</pre></td>
 			<td>The directory to save snapshot files to.</td>
 		</tr>
